[tool.poetry]
name = "span"
version = "0.1.0"
description = ""
authors = ["xdrie <xdrie@alt.icu>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.12.0"
click = "^7.1.2"
python-dotenv = "^0.13.0"
loguru = "^0.5.0"
jsonpickle = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
